package io.houf.sudoku.model

data class PuzzleCandidate(
    val name: String,
    val type: String,
    val content: String
)
