package io.houf.sudoku.model.tile

data class PositionedTile(
    val tile: Tile,
    val position: Position
)
