@startuml
package service {
  interface PuzzleReader {
    +readPuzzles(): List<PuzzleCandidate>
  }

  class DefaultPuzzleReader extends PuzzleReader

  note left of PuzzleReader: Dependency Injection
}

package controller {
  abstract class Controller {
    #sudoku: Sudoku
    {abstract} +createView(): View
  }

  class OverviewController extends Controller
  class PuzzleController extends Controller

  OverviewController --> PuzzleReader
}

package widget {
  abstract class Widget {
    Component
    ..
    {abstract} +draw(Graphics2D)
    {abstract} +update()
    +iterator(): Iterator<Widget>
  }

  class WidgetIterator {
    Iterator
    ..
    +hasNext(): Boolean
    +next(): Puzzle
  }

  class WidgetGroup extends Widget {
    Composite
    ..
    #children: Widget[]
    +findChild(): Widget
  }

  class ButtonWidget extends Widget {
    Leaf
    ..
  }

  class ListWidget extends Widget {
    Leaf
    ..
  }

  class TileWidget extends Widget {
    Leaf
    ..
  }

  class FrameWidgetGroup extends WidgetGroup {
    Composite
    ..
  }

  WidgetGroup *-- Widget
  Widget .l.> WidgetIterator

  note top of WidgetGroup: Composite
  note right of Widget: Iterator
}

package view {
  abstract class View extends WidgetGroup {
    Composite
    ..
  }

  class OverviewView extends View {
    Composite
    ..
  }

  class PuzzleView extends View {
    Composite
    ..
  }

  View --> Controller
}

package model {
  class Game {
    +execute(Command)
    +rollback()
  }

  class GameData << (D, pink) >> {
    Receiver
    ..
  }

  package tile {
    abstract class Tile {
      +accept(TileVisitor)
    }

    class Position << (D, pink) >> {
      +x: Int
      +y: Int
    }

    class PositionedTile << (D, pink) >>

    class DefaultTile extends Tile {
      Element
      ..
    }

    class StaticTile extends Tile {
      Element
      ..
    }

    PositionedTile --> Tile
    PositionedTile --> Position

    note top of Tile: Template
  }

  package visitor {
    interface TileVisitor {
      Visitor
      ..
      +visit(DefaultTile)
      +visit(StaticTile)
    }

    class ResetTileVisitor extends TileVisitor {
      Concrete Visitor
      ..
    }

    note right of TileVisitor: Visitor
  }

  package solver {
    interface Solver {
      Strategy
      ..
      +trySolve(Puzzle): Boolean
      +getErrors(Puzzle): List<Position>
    }

    class DefaultSolver extends Solver {
      Concrete Strategy
      ..
    }

    class SamuraiSolver extends Solver {
      Concrete Strategy
      ..
    }

    note left of Solver: Strategy
  }

  package puzzle {
    class Puzzle {
      +setTile(Position, Tile)
      +getTile(Position): Tile?
      +getTiles(): List<PositionedTile>
      +visitTiles(TileVisitor)
    }

    class PuzzleCandidate << (D, pink) >> {
      +name: String
      +type: String
      +content: String
    }

    interface PuzzleFactory {
      Abstract Factory
      ..
      {static} +get(String): PuzzleFactory
      +createPuzzle(PuzzleCandidate): Puzzle
    }

    class DefaultPuzzleFactory extends PuzzleFactory {
      Concrete Factory
      ..
    }

    class JigsawPuzzleFactory extends PuzzleFactory {
      Concrete Factory
      ..
    }

    class SamuraiPuzzleFactory extends PuzzleFactory {
      Concrete Factory
      ..
    }

    Puzzle *-- Tile
    Puzzle --> Solver
    Puzzle .u.> ResetTileVisitor

    PuzzleCandidate -d[hidden]-> PuzzleFactory

    note left of PuzzleFactory: Abstract Factory
  }

  package command {
    interface Command {
      Command
      ..
      +execute(GameData): Boolean
      +rollback()
    }

    class CommandExecutor {
      Invoker
      ..
      +execute(Command)
      +rollback()
      +empty(): Boolean
    }

    class EnterCommand extends Command {
      Command
      ..
    }

    class StartCommand extends Command {
      Command
      ..
    }

    class SwitchCommand extends Command {
      Command
      ..
    }

    Command *-- CommandExecutor
    StartCommand ..> PuzzleFactory

    note right of Command: Command
  }

  package state {
    interface State {
      State
      ..
      +enter(GameData, Position, Char?): Char?
    }

    class PlayState extends State {
      Concrete State
      ..
    }

    class NoteState extends State {
      Concrete State
      ..
    }

    note right of State: State
  }

  Game --> GameData
  Game --> CommandExecutor
  GameData --> Puzzle
  GameData -u-> State
}

package util {
  class Fonts << (O, orange) >> {
    Singleton
    ..
    +Small: Font
    +Normal: Font
    +Big: Font
  }

  class Images << (O, orange) >> {
    Singleton
    ..
    +read(String): Image
  }
}

note left of util: Singleton

class Sudoku {
  -controller: Controller
  +push(Class<Controller>)
}

Sudoku --> Game
Sudoku <-> Controller
Sudoku --> Widget

note top of Sudoku: MVC & Factory Method
@enduml
